2011-11-03  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION (r99076): Pasting into password fields is broken
        https://bugs.webkit.org/show_bug.cgi?id=71483

        Reviewed by Darin Adler.

        The bug was caused by plainText serializing secured (instead of original) text.
        Fixed the bug by adding new TextIterator behavior that serializes the original text
        and using it in ReplacementFragment::ReplacementFragment.

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::ReplacementFragment):
        * editing/TextIterator.cpp:
        (WebCore::TextIterator::TextIterator):
        (WebCore::TextIterator::emitText):
        * editing/TextIterator.h:

2011-11-03  Eric Carlson  <eric.carlson@apple.com>

        Add TrackEvent
        https://bugs.webkit.org/show_bug.cgi?id=71178

        Reviewed by Sam Weinig.

        Test: fast/events/constructors/track-event-constructor.html

        * CMakeLists.txt: Add new files for TrackEvent.
        * CodeGenerators.pri: Ditto.
        * DerivedSources.cpp: Ditto.
        * DerivedSources.make: Ditto.
        * GNUmakefile.am: Ditto.
        * GNUmakefile.list.am: Ditto.
        * WebCore.gypi: Ditto.
        * WebCore.pro: Ditto.
        * WebCore.xcodeproj/project.pbxproj: Ditto.
        * bindings/generic/EventConstructors.h: Ditto.
        * bindings/gobject/GNUmakefile.am: Ditto.
        * bindings/gobject/WebKitHTMLElementWrapperFactory.cpp: Ditto.
        * bindings/js/JSBindingsAllInOne.cpp: Ditto.

        * bindings/js/JSDictionary.cpp:
        (WebCore::JSDictionary::convertValue): Add method to convert to a Track.
        * bindings/js/JSDictionary.h:

        * bindings/js/JSEventConstructors.cpp:  Add new files for TrackEvent.

        * bindings/js/JSTrackCustom.cpp: Added. 
        (WebCore::toTrack): New, convert from a JSValue to a Track.
        (WebCore::toJS): New, return a JS wrapper for a Track.
        * bindings/js/JSTrackCustom.h: Added.
